# telebotstudio-mcp

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCTION_AUDIT.md  README.md  SECURITY.md  build_index.py  crawler.py  download_docs.py  loader.py  pyproject.toml  requirements-dev.txt  requirements.txt  search.py  server.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agent/: __init__.py  executor.py  planner.py  preview.py  validator.py
api/: __init__.py  auth.py  bot_control.py  bots.py  client.py  commands.py  errors.py  models.py  session.py  utils.py
docs/: advanced-features.md  bot-features-and-functionalities.md  broadcast-function.md  commands-in-tbs.md  conclusion-and-next-steps.md  faq.md  getting-started.md  glossary-and-key-concepts.md  help.telebotstudio.com.md  introduction-to-telebot-studio.md  llms.txt.md  readme.md  real-world.md  reflib_complete_documentation.md  tbs-language-reference.md  tbs-libraries.md  tips-best-practices-and-troubleshooting.md  ton-library-documentation.md
tests/: conftest.py  test_auth.py  test_client.py  test_executor.py  test_loader.py  test_models.py  test_planner.py  test_preview.py  test_search.py  test_server.py  test_session.py  test_validator.py
tools/: __init__.py  agent_tools.py  api_tools.py  batch_tools.py  bot_tools.py  command_tools.py  control_tools.py  credential_tools.py  helpers.py
